# AutowareArchitectureProposal.iv

localization/pose_estimator/ndt_scan_matcher/matching_score/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt/include/ndt/: base.h  common.h  omp.h
localization/pose_estimator/ndt_scan_matcher/ndt/src/: common.cpp
localization/pose_estimator/ndt_scan_matcher/ndt_omp/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt_omp/apps/: align.cpp
localization/pose_estimator/ndt_scan_matcher/ndt_omp/include/ndt_omp/: ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp_impl.hpp
localization/pose_estimator/ndt_scan_matcher/ndt_omp/src/ndt_omp/: ndt_omp.cpp
localization/pose_estimator/ndt_scan_matcher/ndt_pcl_modified/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/include/ndt_scan_matcher/: ndt_scan_matcher_core.h  util_func.h
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/launch/: ndt_scan_matcher.launch
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/src/: ndt_scan_matcher_core.cpp
localization/pose_twist_fusion_filter/ekf_localizer/launch/: ekf_localizer.launch
localization/util/pose_initializer/src/: pose_initializer_core.cpp
perception/object_recognition/detection/lidar_apollo_instance_segmentation/: CMakeLists.txt
sensing/preprocessor/pointcloud/pointcloud_preprocessor/src/: filter.cpp
(+1 files in other folders)
